<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:layout_margin="20dip"
    android:orientation="vertical">


    <Button
        android:id="@+id/loginButton"
        android:layout_width="fill_parent"
        android:layout_height="@dimen/edittext_height"
        android:layout_centerInParent="true"
        android:layout_marginTop="@dimen/edittext_margintop"
        android:hint="@string/hint_password"
        android:text="@string/login" />

    <EditText
        android:id="@+id/passwordEditText"
        android:layout_width="fill_parent"
        android:layout_height="@dimen/edittext_height"
        android:layout_above="@id/loginButton"
        android:layout_marginTop="@dimen/edittext_margintop"
        android:inputType="textPassword"
        android:hint="@string/hint_password" />

    <EditText
        android:id="@+id/usernameEditText"
        android:layout_width="fill_parent"
        android:layout_height="@dimen/edittext_height"
        android:layout_above="@id/passwordEditText"
        android:hint="@string/hint_username" />


</RelativeLayout>