<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:context=".MainActivity">

    <ImageView
        android:id="@+id/qrImageView"
        android:layout_width="150dip"
        android:layout_height="150dip"
        android:background="@android:color/white" />

    <TextView
        android:id="@+id/userInfo"
        android:layout_width="match_parent"
        android:layout_height="150dip"
        android:padding="@dimen/activity_horizontal_margin"
        android:gravity="center"
        android:textSize="22sp"
        android:layout_toRightOf="@id/qrImageView"
        android:text="@string/app_name" />

    <Button
        android:id="@+id/scannerButton"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/qrImageView"
        android:layout_marginTop="15dp"
        android:gravity="center"
        android:text="Scanner QR Code" />


    <EditText
        android:id="@+id/inputEditText"
        android:layout_width="fill_parent"
        android:layout_height="60dip"
        android:layout_below="@id/scannerButton" />

    <Button
        android:id="@+id/shareButton"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/inputEditText"
        android:layout_marginTop="15dp"
        android:gravity="center"
        android:text="Share QR Code" />

    <com.jikabao.android.common.view.EFStyledButton
        android:id="@+id/generateButton"
        android:layout_width="match_parent"
        android:layout_height="50dip"
        android:layout_below="@id/shareButton"
        android:text="Generate QR Code"
        app:fontFamily="arialmt" />



    <Button
        android:id="@+id/aboutButton"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="15dp"
        android:gravity="center"
        android:layout_alignParentBottom="true"
        android:text="@string/about" />

    <Button
        android:id="@+id/wechatButton"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="15dp"
        android:gravity="center"
        android:layout_above="@id/aboutButton"
        android:text="@string/wechat_login" />
    <!--<net.qiujuer.genius.material.MaterialButton-->
    <!--android:id="@+id/scannerButton"-->
    <!--android:layout_width="match_parent"-->
    <!--android:layout_height="wrap_content"-->
    <!--android:layout_marginTop="15dp"-->
    <!--android:gravity="center"-->
    <!--android:text="Scanner QR Code"-->
    <!--material:gm_fontFamily="opensans"-->
    <!--material:gm_fontWeight="bold"-->
    <!--material:gm_isAutoMove="true"-->
    <!--material:gm_isMaterial="true"-->
    <!--material:gm_textAppearance="light"-->
    <!--material:gm_theme="@array/grape" />-->


    <!--<net.qiujuer.genius.material.MaterialButton-->
    <!--android:layout_below="@id/scannerButton"-->
    <!--android:id="@+id/generatorButton"-->
    <!--android:layout_width="match_parent"-->
    <!--android:layout_height="wrap_content"-->
    <!--android:layout_marginTop="15dp"-->
    <!--android:gravity="center"-->
    <!--android:text="Generate QR Code"-->
    <!--material:gm_fontFamily="opensans"-->
    <!--material:gm_fontWeight="bold"-->
    <!--material:gm_isAutoMove="true"-->
    <!--material:gm_isMaterial="true"-->
    <!--material:gm_textAppearance="light"-->
    <!--material:gm_theme="@array/grape" />-->
</RelativeLayout>
